--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
              <div class="cart-content">
                  <!-- cart item -->
                 <div class="cart-item"></div>
-                <img src="./images/product-1.jpeg" alt="product">
+              <!--  <img src="./images/product-1.jpeg" alt="product">
                 <div>
                     <h4>queen bed</h4>
                     <h5>$9.00</h5>
@@ -84,9 +84,10 @@
                     <p class="item-amount">1</p>
                     <i class="fas fa-chevron-down"></i>
 
-                </div>
-                 <!-- end cart item -->
+                </div>-->
+                 
              </div>
+             <!-- end cart item -->
              <div class="cart-footer">
                  <h3>your total : $ <span class="cart-total">0</span></h3>
                  <button class="clear-cart banner-btn">clear cart</button>
